--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
   <head>
     <meta charset="utf-8">
    	<title>Video Watcher</title>
-    <link rel="stylesheet" type="text/css" href="http://www.teaching-materials.org/common/bootstrap.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <div class="container">
-	    <div class="row">
-	      <div class="span12">
-	        <h2 class="page-header">Best Videos Ever ❤</h1>
-	      </div>
-	    </div>
- 
-    <div class="row">
-      <div class="span3">
-        <ul>
-          <li><a href="https://www.youtube.com/watch?v=TddFnTB_7IM">Trip through the 80s</a></li>
-          <li><a href="https://www.youtube.com/watch?v=epUk3T2Kfno">Otters Holding Hands</a></li>
-          <li><a href="https://www.youtube.com/watch?v=il2IrgFHfsg">The Ooooh Cat</a></li>
-        </ul>
-       </div>
-     </div>
+    <div class="container-fluid" id="img_driver" >
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-4" >
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12" >
+        </div>
+      </div>
     </div>
-
     <script type="text/javascript" src="http://www.teaching-materials.org/common/youtube.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
